# webcee-win-v0.1.0-testing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_project.bat  run_demo.bat  run_showcase.bat
compiler/: main.c
compiler/core/: ast.c  ast.h  codegen.c  codegen.h  diagnostic.c  diagnostic.h  error_codes.h  lexer.c  lexer.h  memory_pool.c  memory_pool.h  parser.c  parser.h  token.h
docs/: api_reference.md  architecture.md  core_concepts.md  getting_started.md  integration.md  syntax_migration.md
examples/hello_world/: CMakeLists.txt  Makefile
examples/hello_world/src/: main.c
examples/hello_world/ui/: blog.wce  complex.wce  device.wce  list_demo.wce  pure_c.wce
examples/showcase/: main.c  ui.wce
examples/simple_demo/: simple_demo.c  simple_demo.wce
examples/syntax_new/: demo_layout.c
include/: webcee.h  webcee_build.h
src/: webcee.c
tools/: build_project.bat  upgrade_assistant.py  wce_parser.c  wce_parser.py
